:bug: Correction of the overflow-x and the webkit scrollbar

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,7 @@ body.body--index
   margin: 0;
   height: 420vh;
   background: #FFFFFF;
+  overflow-x: hidden;
 
     .container
   {
@@ -405,9 +406,10 @@ body.body--index
       }
     }
   }
-  ::-webkit-scrollbar {
-    display: none;
-  }
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 
